este es el codigo del curso que hize un par de cambios para poder ver el error

--- a/sisfac/sisfac-ear/pom.xml
+++ b/sisfac/sisfac-ear/pom.xml
@@ -18,7 +18,7 @@
 		<version.ear.plugin>2.8</version.ear.plugin>
 		<version.ear.plugin.conf>6</version.ear.plugin.conf>
 		<nombreapp>sisfac</nombreapp>
-		<jboss.deploy.dir>/home/martosfre/Matoosfe/Capacitaciones/PrimefacesJEE/Servidores/wildfly-10.1.0.Final/standalone/deployments/</jboss.deploy.dir>
+		<jboss.deploy.dir>C:\Users\Dell_\SERVERS\wildfly-16.0.0.Final\standalone\deployments/</jboss.deploy.dir>
 	</properties>
 
 	<dependencies>
