--- a/sisfac/pom.xml
+++ b/sisfac/pom.xml
@@ -29,11 +29,10 @@
 	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${version.junit}</version>
-			<scope>test</scope>
-		</dependency>
+ 		 <groupId>junit</groupId>
+  		 <artifactId>junit</artifactId>
+         <version>4.13-beta-1</version>
+    </dependency>
 	</dependencies>
 	<modules>
 		<module>sisfac-ear</module>
